--- a/server/.env
+++ b/server/.env
@@ -2,4 +2,4 @@ MONGO_URI=mongodb+srv://chirag:qwertyuiop12345@cluster0.wwt62.mongodb.net/SPOOKY
 PORT=5500
 JWT_SECRET=your_super_secret_key
 NODE_ENV=development
-FRONTEND_URL=http://localhost:3000
+CLIENT_URL=http://localhost:3000
