Login Logic Fixed

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,20 @@
 MONGO_URI=mongodb+srv://chirag:qwertyuiop12345@cluster0.wwt62.mongodb.net/SPOOKY
 PORT=5500
-JWT_SECRET=your_super_secret_key
 NODE_ENV=development
 CLIENT_URL=http://localhost:3000
+
+GOOGLE_GEMINI_KEY=AIzaSyALGAUplr-1IMvaS79R9fV2UPFtxfytqkE
+
+
+JWT_SECRET=Form_Data_Secret
+
+
+GOOGLE_CLIENT_ID=51975979808-qv43j2js2stnb8houeul0e9nka3s5706.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
+FACEBOOK_CLIENT_ID=your_facebook_id
+FACEBOOK_CLIENT_SECRET=your_facebook_secret
+
+LINKEDIN_CLIENT_ID=your_linkedin_id
+LINKEDIN_CLIENT_SECRET=your_linkedin_secret
+
